--- a/Common/config_private.h.template
+++ b/Common/config_private.h.template
@@ -19,14 +19,21 @@
  * 設定値 1: CHANNEL_1 を使用
  * 設定値 2: CHANNEL_2 を使用
  * 設定値 3: CHANNEL_3 を使用
+ * 
+ * 注意: CHANNEL_DEFAULT と CONFIG_DEFAULT_CHANNEL は同じ値を使用します。
+ * - CHANNEL_DEFAULT: EI1/EI2ピンによるハードウェア設定で使用（EI1=O, EI2=O の場合）
+ * - CONFIG_DEFAULT_CHANNEL: インタラクティブモード/フラッシュメモリのデフォルト値として使用（CHANNEL_DEFAULTと同じ値）
+ * 
+ * 警告: 以下の値はメーカーのデフォルト値です。このドキュメントでは推奨していません。
+ * 標準アプリでよく使用されるチャネルと重複する可能性があるため、他のチャネルを選択することを推奨します。
  */
-#define CHANNEL_DEFAULT  16  //!< デフォルトチャネル（設定値0で使用）
-#define CHANNEL_1        12  //!< EI1=G, EI2=O で使用されるチャネル（設定値1）
-#define CHANNEL_2        21  //!< EI1=O, EI2=G で使用されるチャネル（設定値2）
-#define CHANNEL_3        25  //!< EI1=G, EI2=G で使用されるチャネル（設定値3）
+#define CHANNEL_DEFAULT  16  //!< ハードウェア設定用デフォルトチャネル（EI1=O, EI2=O で使用、au32ChMask_Preset[0]に格納、メーカーデフォルト）
+#define CHANNEL_1        12  //!< EI1=G, EI2=O で使用されるチャネル（設定値1、メーカーデフォルト）
+#define CHANNEL_2        21  //!< EI1=O, EI2=G で使用されるチャネル（設定値2、メーカーデフォルト）
+#define CHANNEL_3        25  //!< EI1=G, EI2=G で使用されるチャネル（設定値3、メーカーデフォルト）
 
 /* チャネルマスク（ビットマスク形式） */
-#define CHMASK           ((1UL << CHANNEL_DEFAULT))  //!< デフォルトチャネルマスク
+#define CHMASK           ((1UL << CHANNEL_DEFAULT))  //!< デフォルトチャネルマスク（ハードウェア設定用）
 #define CHMASK_1         ((1UL << CHANNEL_1))         //!< チャネル1のマスク
 #define CHMASK_2         ((1UL << CHANNEL_2))         //!< チャネル2のマスク
 #define CHMASK_3         ((1UL << CHANNEL_3))         //!< チャネル3のマスク
@@ -42,17 +49,31 @@
 #define CONFIG_DEFAULT_LOGICALID       1             //!< デフォルトの論理デバイスID
 
 /* チャネル設定 */
-#define CONFIG_DEFAULT_CHANNEL         18            //!< デフォルトのチャネル（11-26）
-#define CONFIG_DEFAULT_CHANNELS_3      ((1UL << 18) >> 11)  //!< デフォルトのチャネル（複数可）
+/* 注意: CONFIG_DEFAULT_CHANNEL は CHANNEL_DEFAULT と同じ値を使用します。
+ * - CONFIG_DEFAULT_CHANNEL: インタラクティブモード/フラッシュメモリのデフォルト値（twesettings_std_defsets.cで使用）
+ * - CHANNEL_DEFAULT: EI1/EI2ピンによるハードウェア設定用（au32ChMask_Preset[0]で使用）
+ * 
+ * 警告: 以下の値はメーカーのデフォルト値です。このドキュメントでは推奨していません。
+ * 標準アプリでよく使用されるチャネルと重複する可能性があるため、他のチャネルを選択することを推奨します。
+ */
+#define CONFIG_DEFAULT_CHANNEL         CHANNEL_DEFAULT  //!< ソフトウェア設定用デフォルトチャネル（インタラクティブモード/フラッシュメモリのデフォルト値、CHANNEL_DEFAULTと同じ値、メーカーデフォルト）
+#define CONFIG_DEFAULT_CHANNELS_3      ((1UL << CHANNEL_DEFAULT) >> 11)  //!< デフォルトのチャネル（複数可、CHANNEL_DEFAULTから計算、メーカーデフォルト）
 
 /* 送信出力と再送回数（XY形式: X=再送回数, Y=出力レベル） */
-#define CONFIG_DEFAULT_POWER_N_RETRY   0x93          //!< デフォルト: 再送9回=最大, 出力レベル3=最大
+#define CONFIG_DEFAULT_POWER_N_RETRY   0x42          //!< デフォルト: 再送4回, 出力レベル2（中）
 
 /* UARTボーレート（実際のボーレートを100で割った値） */
 #define CONFIG_DEFAULT_UARTBAUD        1152         //!< デフォルト: 115200 bps
 
+/* 子機連続0.03秒モード(3)のサイクル（FPS: 毎秒送信回数） */
+#define CONFIG_DEFAULT_FPS             16            //!< デフォルト: 16Hz（4,8,16,32のいずれか）
+
+/* 暗号化設定 */
+#define CONFIG_DEFAULT_ENCENABLE       0             //!< デフォルト: 暗号化を無効化（0:無効, 1:有効）
+#define CONFIG_DEFAULT_ENCKEY          "\0           "  //!< デフォルト: 暗号鍵（15文字、空文字列）
+
 /* オプションビット（32bit） */
-#define CONFIG_DEFAULT_OPTBITS         0x420000UL    //!< デフォルト: DIO出力を反転 + IO状態のUART出力抑制
+#define CONFIG_DEFAULT_OPTBITS         0x00000000UL  //!< デフォルト: オプションなし
 
 #endif  /* CONFIG_PRIVATE_H_INCLUDED */
 
